# SEP

./: Cargo.toml  README.md  readme.org  spec.org
client/src/: main.rs
sep/: Cargo.toml
sep/src/: lib.rs
server/: Cargo.toml  index.sef
server/src/: main.rs
src/: main.rs
