[package]
name = "airscan"
version = "0.1.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Wafelack/airscan"
description = "Yet another port scanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = "2.33.3"
time = "*"